chore(test): add more bytebuddy fixes